[project]
name = "sbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.17.2",
    "apscheduler==3.11.1",
    "authlib==1.6.5",
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "click==8.3.1",
    "coverage==7.12.0",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "eventlet==0.40.4",
    "faker==38.2.0",
    "flake8==7.3.0",
    "flasgger",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "flask-executor==1.0.0",
    "flask-jsonschema-validator==0.0.4",
    "flask-mailman==1.1.1",
    "flask-migrate==4.1.0",
    "flask-socketio==5.5.1",
    "flask-sqlalchemy==3.1.1",
    "flask-testing==0.8.1",
    "flask-webtest==0.1.6",
    "freezegun==1.5.5",
    "gunicorn==23.0.0",
    "hbmqtt2==0.9.7",
    "jinja2==3.1.6",
    "mock==5.2.0",
    "munch==4.0.0",
    "mysqlclient==2.2.7",
    "paramiko==4.0.0",
    "passlib==1.7.4",
    "pillow==12.0.0",
    "pipdeptree==2.30.0",
    "puremagic==1.30",
    "pyjwt==2.10.1",
    "pyotp==2.9.0",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "python-socketio==5.15.0",
    "python2-secrets==1.0.5",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "qrcode==8.2",
    "redis==7.1.0",
    "requests==2.32.5",
    "responses==0.25.8",
    "sqlalchemy==2.0.44",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
]

[tool.uv.sources]
flasgger = { git = "https://github.com/SURFscz/flasgger", rev = "surf/main" }
