[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbs"
version = "0.0.0"
description = "SURF SamenwerkingsBeheerSysteem (SBS)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "APScheduler==3.11.2",
    "Authlib==1.6.9",
    "bcrypt==5.0.0",
    "click==8.3.1",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "eventlet==0.40.4",
    "flask==3.1.3",
    "flask-jsonschema-validator==0.0.4",
    "flask-mailman==1.1.1",
    "Flask-Cors==6.0.2",
    "Flask-Executor==1.0.0",
    "Flask-SocketIO==5.6.1",
    "Flask-SQLAlchemy==3.1.1",
    "flask_migrate==4.1.0",
    "flasgger @ git+https://github.com/SURFscz/flasgger@surf/main",
    "gunicorn==25.1.0",
    "jinja2==3.1.6",
    "munch==4.0.0",
    "mysqlclient==2.2.8",
    "paramiko==4.0.0",
    "passlib==1.7.4",
    "Pillow==12.1.1",
    "puremagic==1.30",
    "PyJWT==2.12.1",
    "pyotp==2.9.0",
    "python-socketio==5.16.1",
    "python2-secrets==1.0.5",
    "pytz==2026.1.post1",
    "PyYAML==6.0.3",
    "qrcode==8.2",
    "redis==7.3.0",
    "requests==2.32.5",
    "SQLAlchemy==2.0.48",
    "urllib3==2.6.3",
    "websockets==16.0",
    "werkzeug==3.1.6",
]

[project.optional-dependencies]
test = [
    "alembic==1.18.4",
    "blinker==1.9.0",
    "coverage==7.13.4",
    "Faker==40.15.0",
    "flake8==7.3.0",
    "flake8-pyproject==1.2.3",
    "flask-testing==0.8.1",
    "flask-webtest==0.1.6",
    "freezegun==1.5.5",
    "hbmqtt2==0.9.7",
    "mock==5.2.0",
    "pip-tools==7.5.3",
    "pipdeptree==2.31.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "responses==0.26.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = ".."

[tool.setuptools.packages.find]
where = [".."]
include = ["server*"]
exclude = ["server.test*"]

[tool.flake8]
extend-ignore = ["E126", "E127", "E402", "W503"]
ignore = ["E126", "E127"]
max-line-length = 128

[tool.coverage.run]
concurrency = ["thread", "eventlet", "multiprocessing"]
omit = [
    "test/*",
    "migrations/*",
    "mqtt/*",
    "__main__.py",
    "mail.py",
]
